fix button display on smaller window

--- a/src/index.scss
+++ b/src/index.scss
@@ -124,35 +124,52 @@ body {
 
 .button-created-by-div {
   display: flex;
-  margin-left: 200px;
-  gap: 290px;
+  // margin-left: 200px;
+  // gap: 290px;
   align-items: flex-end;
+  // height: 47px;
+  justify-content: space-around;
+  // border: 1px solid;
+}
+
+.button-div {
+  display: flex;
+  gap: 200px;
+  // margin-right: 100px;
 }
 
 .generate-random-tree-button {
   cursor: pointer;
   border: none;
+  // border: 1px solid red;
   height: 47px;
-  padding: 10px;
+  // padding: 10px 40px;
   border-radius: 10px;
   background: rgb(0, 255, 234);
   color: black;
   font-size: 20px;
   font-family: "Balsamiq Sans", cursive;
   box-shadow: 0px 0px 50px -10px rgb(255, 0, 119);
+  // text-align: center;
+  // display: flex;
+  text-align: center;
+  line-height: 47px;
+  box-sizing: border-box;
+  width: 260px;
 }
 
 .generate-tree-button {
   cursor: pointer;
   border: none;
   height: 47px;
-  padding: 10px;
+  // padding: 10px;
   border-radius: 10px;
   background: rgb(255, 0, 119);
   color: black;
   font-size: 20px;
   font-family: "Balsamiq Sans", cursive;
   box-shadow: 0px 0px 50px -10px rgb(0, 255, 234);
+  width: 180px;
 }
 
 #leaf-fullness,
